[package]
name = "cychron_worker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
petgraph = { version = "0.6.4", features = ["serde-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.34", features = ["macros", "rt-multi-thread"] }

[build-dependencies]
tonic-build = "0.10"